HRU-5847 corrected the alignment of header main section, tools menu alignment, profile menu alignment, corrected guest-sign-in part.

--- a/web-app/css/aurora-tools.css
+++ b/web-app/css/aurora-tools.css
@@ -65,15 +65,15 @@
     display: block;
     width: 0;
     top: -15px;
-    left: 0px;
+    right: 0px;
 }
 
-@media (min-width:0px) and (max-width:768px) {
+@media (min-width:0px) and (max-width:767px) {
     #toolsCanvas{
         width : 82.5%;
     }
 }
-@media (min-width:0px) and (max-width:768px) and (orientation : portrait)	{}
+@media (min-width:0px) and (max-width:767px) and (orientation : portrait)	{}
 
-@media (min-width:769px) and (max-width:1023px)	{ }
+@media (min-width:768px) and (max-width:1023px)	{ }
 
